--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "locomotive-scroll": "^4.1.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.7.1",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11"
