--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "^4.1.11",
     "gsap": "^3.13.0",
     "lenin": "^1.0.12",
