--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
     "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "^4.1.11",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "gsap": "^3.13.0",
     "lenin": "^1.0.12",
     "lenis": "^1.3.8",
@@ -21,6 +25,7 @@
     "react-dom": "^19.1.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.7.1",
+    "stripe": "^19.1.0",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11"
   },
@@ -34,5 +39,18 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Arpitray/commerce.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Arpitray/commerce/issues"
+  },
+  "homepage": "https://github.com/Arpitray/commerce#readme"
 }
